[package]
name = "jwt-edge-validation"
version = "0.1.0"
authors = ["Andreas Linz <anli@spreadshirt.net>"]
edition = "2018"

[lib]
crate-type=["cdylib"]

[dependencies]
http_guest = { git = "https://github.com/fastly/terrarium-rust-guest", branch = "master" }
failure = "0.1"
byteorder = "1.3"
hmac = "0.7"
sha2 = "0.8"
base64 = "0.10"
regex = "1"
